# pal2sim_cps

./: README.md  data_handler.py  fullsize_run.txt  main.py  pyproject.toml  requirements.txt
classificators/: dummy_classifier.py  mini_rocket.py  random_forest_classifier.py
utils/: plotting.py  utils.py
