[project]
name = "pal2sim-cps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "certifi==2026.2.25",
    "charset-normalizer==3.4.4",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.61.1",
    "idna==3.11",
    "joblib==1.5.3",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.8",
    "numba==0.65.0",
    "numpy==2.3.5",
    "packaging==26.0",
    "pandas==2.3.3",
    "pandas-stubs~=2.3.3",
    "pillow==12.1.1",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.5",
    "scikit-learn==1.7.2",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "six==1.17.0",
    "sktime>=0.40.1",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.3",
    "urllib3==2.6.3",
]
